# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: test.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: asgi.py  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_created_at_alter_status_name.py
task_manager/task_manager/: settings.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author.py  0003_alter_task_author.py  0004_alter_task_author_alter_task_executor.py  0005_task_labels.py
task_manager/templates/: base.html  index.html  login.html  navbar.html
task_manager/templates/labels/: create.html  delete.html  label.html  update.html
task_manager/templates/statuses/: create.html  delete.html  status.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  task.html  update.html
task_manager/templates/users/: create.html  delete.html  update.html  users.html
task_manager/users/: forms.py  mixin.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
